# SIWY

./: .gitignore  README.md  design_proposal.md  pyproject.toml  results.json  results_tmptr_3.json  results_tmptr_5.json
docs/: experiment_results.md
siwy/data/: schema.py
siwy/experiments/: aggregate.py  run.py  runner.py  visualize.py
siwy/inference/: parser.py
siwy/metrics/: semantic.py  stability.py
siwy/models/: loader.py
siwy/prompts/: bfi10.py  templates.py
tests/: test_metrics.py  test_parser.py
